--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "xp-icon",
   "license": "BSD-3-Clause",
   "version": "0.8.0",
-  "description": "This component is used to display an icon.",
+  "description": "This element is used to display an icon.",
   "authors": [
     "Giuliano Rullo <g.rullo@expandjs.com>",
     "Maurizio Stefàno <m.stefano@expandjs.com>",
