--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "xp-icon",
   "license": "BSD-3-Clause",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "A custom element able to display an icon",
   "homepage": "http://expandjs.com/elements/xp-icon",
   "authors": [
@@ -22,8 +22,8 @@
     "**/.*"
   ],
   "dependencies": {
-    "expandjs": "ExpandJS/expandjs",
-    "xp-iconset": "ExpandJS/xp-iconset",
-    "polymer": "Polymer/polymer"
+    "expandjs": "ExpandJS/expandjs#0.9.1",
+    "xp-iconset": "ExpandJS/xp-iconset#0.9.1",
+    "polymer": "Polymer/polymer#^1.0.4"
   }
 }
