--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "xp-icon",
   "license": "BSD-3-Clause",
   "version": "0.9.6",
+  "main": "xp-icon.html",
   "description": "A custom element able to display an icon",
   "homepage": "http://expandjs.com/elements/xp-icon",
   "authors": [
@@ -14,9 +15,6 @@
     "html5",
     "expandjs",
     "web-components"
-  ],
-  "main": [
-    "xp-icon.html"
   ],
   "ignore": [
     "**/.*"
